@@ -12,8 +12,13 @@ Compile / console / scalacOptions := StepikSpark.scalacOptionsConsole
 Test / console / scalacOptions := StepikSpark.scalacOptionsConsole
 
 libraryDependencies ++= Seq(
-  StepikSpark.Libs.spark
+  StepikSpark.Libs.sparkSql,
+  StepikSpark.Libs.sparkCore
 )
+
+// Fix cannot access class sun.nio.ch.DirectBuffer
+javaOptions += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+fork := true
 
 // Organize imports
 scalafixDependencies += "com.github.liancheng" %% "organize-imports" % "0.5.0"
